# OpenApi.yml
@@ -683,6 +683,34 @@ components:
         rsk:
           type: string
       type: object
+    SummariesResponse:
+      properties:
+        peginSummary:
+          $ref: '#/components/schemas/SummaryData'
+          type: object
+        pegoutSummary:
+          $ref: '#/components/schemas/SummaryData'
+          type: object
+      type: object
+    SummaryData:
+      properties:
+        acceptedQuotesCount:
+          type: integer
+        lpEarnings:
+          type: string
+        refundedQuotesCount:
+          type: integer
+        totalAcceptedQuotedAmount:
+          type: string
+        totalFeesCollected:
+          type: string
+        totalPenaltyAmount:
+          type: string
+        totalQuotedAmount:
+          type: string
+        totalQuotesCount:
+          type: integer
+      type: object
     pkg.AcceptQuoteRequest:
       properties:
         quoteHash:
@@ -1058,7 +1086,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/'
+                $ref: '#/components/schemas/SummariesResponse'
           description: Financial data for the given period
       summary: Summaries
   /userQuotes:
